--- a/package.json
+++ b/package.json
@@ -1,32 +1,97 @@
 {
-  "name": "hooks",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/jest": "^24.0.11",
-    "@types/node": "^11.12.0",
-    "@types/react": "^16.8.10",
-    "@types/react-dom": "^16.8.3",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8",
-    "styled-components": "^4.2.0",
-    "typescript": "^3.3.4000"
+  "name": "smook",
+  "version": "0.0.0-development",
+  "description": "A state management solution in the era of React hooks",
+  "main": "lib/smook.js",
+  "module": "lib/smook.es.js",
+  "files": [
+    "lib"
+  ],
+  "author": "Teemu Taskula <teemu.taskula@taitounited.fi>",
+  "license": "MIT",
+  "homepage": "https://github.com/Temzasse/smook#readme",
+  "unpkg": "lib/smook.js",
+  "directories": {
+    "example": "examples"
+  },
+  "bugs": {
+    "url": "https://github.com/Temzasse/smook/issues"
   },
   "scripts": {
-    "install:clean": "rm -rf node_modules && npm install",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "commit": "git-cz",
+    "test": "jest",
+    "prebuild": "rimraf lib",
+    "build": "rollup -c && npm run copy:types",
+    "build:watch": "rollup -c --watch",
+    "copy:types": "cp ./src/smook.d.ts ./lib/smook.d.ts",
+    "install:clean": "rimraf node_modules && npm install",
+    "link:example": "npm link && npm run link:basic && npm run link:typed",
+    "link:basic": "pushd example/basic && npm link smook && popd",
+    "link:typed": "pushd example/typed && npm link smook && popd",
+    "semantic-release": "echo TODO semantic-release",
+    "travis-deploy-once": "echo TODO travis-deploy-once"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Temzasse/smook.git"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "keywords": [
+    "react",
+    "hooks",
+    "state",
+    "modular"
+  ],
+  "peerDependencies": {
+    "react": ">=16.8.0"
+  },
+  "devDependencies": {
+    "@babel/core": "7.4.3",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.3",
+    "@babel/plugin-transform-modules-commonjs": "7.4.3",
+    "@babel/preset-env": "7.4.3",
+    "@babel/preset-react": "7.0.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "24.7.1",
+    "commitizen": "3.0.7",
+    "cz-conventional-changelog": "2.1.0",
+    "eslint": "5.16.0",
+    "eslint-config-prettier": "4.1.0",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-prettier": "3.0.1",
+    "eslint-plugin-react": "7.12.4",
+    "eslint-config-standard": "12.0.0",
+    "eslint-loader": "2.1.2",
+    "eslint-plugin-node": "8.0.1",
+    "eslint-plugin-promise": "4.1.1",
+    "eslint-plugin-standard": "4.0.0",
+    "husky": "1.3.1",
+    "jest": "24.7.1",
+    "jest-dom": "3.1.3",
+    "prettier": "1.16.4",
+    "react": "16.8.6",
+    "react-testing-library": "6.0.4",
+    "regenerator-runtime": "0.13.2",
+    "rimraf": "2.6.3",
+    "rollup": "1.8.0",
+    "rollup-plugin-babel": "4.3.2",
+    "semantic-release": "15.13.3",
+    "travis-deploy-once": "5.0.11"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    }
+  },
+  "jest": {
+    "modulePathIgnorePatterns": [
+      "<rootDir>/example/",
+      "<rootDir>/src/*.ts"
+    ],
+    "testEnvironment": "node",
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/src/*.js"
+    ]
+  }
 }
