--- a/example/package.json
+++ b/example/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "@types/jest": "^24.0.11",
     "@types/node": "^11.12.0",
-    "@types/react": "^16.8.10",
-    "@types/react-dom": "^16.8.3",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
+    "@types/react": "^16.8.14",
+    "@types/react-dom": "^16.8.4",
+    "@types/styled-components": "^4.1.14",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
     "styled-components": "^4.2.0",
     "typescript": "^3.3.4000"
